--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,196 @@
-.App {
-  text-align: center;
-}
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+#backpage{
+  width: 100%;
+  height: 600px;
+  background-color: #484343;
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  align-items: center;
+}
+#main{
+  background-color: hsl(0, 100%, 99%);
+height: 450px;
+width: 1200px;
+
+display: flex;
+
+}
+#img{
+  background-color: hsl(0, 100%, 99%);
+  width: 50%;
+  height: 95%;
+  margin-right: 1%;
+}
+#img1{
+  height: 100%;
+  width: 100%;
+  border-radius: 10px;
+  margin: 10px;
+}
+#news{
+  background-color: hsl(0, 100%, 99%);
+  width: 50%;
+  height: 100%;
+  margin-left: 1%;
+
+}
+#row1{
+  display: flex; 
+  flex-direction: row;
+ 
+}
+#box1{
+  width: 50%;
+  border: 2px solid rgb(147, 143, 143);
+  background-color: aliceblue;
+  height: 200px;
+  margin: 10px;
+  border-radius: 10px;
+}
+#box2{
+  width: 50%;
+  border: 2px solid rgb(147, 143, 143);
+  background-color: aliceblue;
+  height: 200px;
+  margin: 10px;
+  border-radius: 10px;
+ 
+  
+}
+#row2{
+  display: flex; 
+  flex-direction: row;
+ 
+}
+#box3{
+  width: 50%;
+  border: 2px solid rgb(147, 143, 143);
+  background-color: aliceblue;
+  height: 200px;
+  margin: 10px;
+  border-radius: 10px;
+  
+}
+#box4{
+  width: 50%;
+  border: 2px solid rgb(147, 143, 143);
+  background-color: aliceblue;
+  height: 200px;
+  margin: 10px;
+  border-radius: 10px;
+}
+.btn{
+  border: none;
+  background-color: rgb(224, 157, 95);
+  width: 50px;
+  height: 20px;
+  overflow-wrap: normal;
+  color:rgb(167, 88, 15);
+  border-radius: 2px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 5px;
+  cursor: pointer;
+}
+.title{
+  font-size: 15px;
+  font-weight:bold;
+  margin: 5px;
+}
+.para{
+  margin: 5px;
+}
+.by{
+  margin: 5px;
+}
+.header{
+  display: flex;
+
+  
+}
+#box1:hover{
+  box-shadow: -1px 0 10px black;
+}
+#box2:hover{
+  box-shadow: -1px 0 10px black;
+}
+#box3:hover{
+  box-shadow: -1px 0 10px black;
+}
+#box4:hover{
+  box-shadow: -1px 0 10px black;
+  
+}
+.btn:hover{
+  background-color: rgb(178, 90, 7);
   color: white;
 }
-
-.App-link {
-  color: #61dafb;
+.share{
+  margin-left: 150px;
+  cursor: pointer;
 }
+.menu{
+  margin-left: 20px;
+  cursor: pointer;
+}
+@media screen and (max-width: 600px){
+  #main{
+    display: flex;
+    flex-direction: column;
+  }
+  #img{
+    width: 90%;
+    height: auto;
+    justify-content: center;
+    align-items: center;
+    margin-left: 10px;
+  }
+  #news{
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+  }
+  #row1{
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    justify-content: center;
+    align-items: center;
+    margin-top: 20px;
+  }
+  #row2{
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    justify-content: center;
+    align-items: center;
+  }
+  #box1{
+    height: auto;
+  }
+  #box2{
+    height: auto;
+  }
+  #box3{
+    height: auto;
+  }
+  #box4{
+    height: auto;
+  }
+  #news{
+    margin-top: 20px;
+  }
+  #backpage{
+    width: 100%;
+    height: auto;
+    background-color: #484343;
+    justify-content: center;
+    align-items: center;
+  }
+  .share{
+    margin-left: 80px;
+  }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
 }
